infrastructure/overlay/d1-blue/controllers/kagent-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
  namespace: kagent
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-user, x-auth-request-email, x-auth-request-access-token
    nginx.ingress.kubernetes.io/auth-signin: https://kagent.d1.gitops.olegen.fun/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://kagent.d1.gitops.olegen.fun/oauth2/auth
spec:
  tls:
  - hosts:
    - "*.d1.gitops.olegen.fun"
    - "d1.gitops.olegen.fun"
    secretName: letsencrypt-prod
  rules:
  - host: kagent.d1.gitops.olegen.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent
            port:
              number: 80
  ingressClassName: nginx
